<resources>
    <string name="app_name">logApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings related to login -->
    <string name="welcome">환영합니다.</string>
    <string name="start_message">업종을 선택해주세요.</string>
    <string name="prompt_id_email">아이디/이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="wholesale_login">도매\n로그인</string>
    <string name="retail_login">소매\n로그인</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_userId">Not a valid userId</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="action_sign">회원가입</string>
    <string name="action_wholesale_login">도매 로그인</string>
    <string name="action_wholesale_sign">운송 회원가입</string>
    <string name="action_wholesale_naver">운송 네이버 로그인</string>
    <string name="action_retail_login">소매 로그인</string>
    <string name="action_retail_sign">매장 회원가입</string>
    <string name="action_retail_naver">매장 네이버 로그인</string>
    <!-- Strings related to login -->
    <string name="prompt_email">이메일 주소</string>
    <string name="prompt_id">아이디</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_phone">휴대전화 번호</string>
    <string name="prompt_naver_id">네이버 아이디</string>
    <string name="invalid_user_id">유효하지 않은 값입니다.</string>
    <string name="invalid_user_name">유효하지 않은 값입니다.</string>
    <string name="invalid_email">유효하지 않습니다</string>
    <string name="invalid_phone_number">유효하지 않습니다.</string>


</resources>